<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <LinearLayout
            android:id="@+id/layout_identity_userfavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar_userfavorite"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                tools:src="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name_userfavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#5d5d5d" />

                <TextView
                    android:id="@+id/txt_repository_userfavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_showprofile_userfavorite_itemcard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_addtofavorite_bg"
            android:text="@string/btn_showprofile"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/layout_identity_userfavorite"
            app:layout_constraintStart_toStartOf="@id/layout_identity_userfavorite"
            app:layout_constraintEnd_toEndOf="@id/layout_identity_userfavorite"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>